@@ -8,6 +8,9 @@ v. 1.3.0 (the future)
 		
 	**** IMPORTANT *** Change: Various changes in Segue necessitate that you upgrade to a new config file as well as run the '1.3.0 update' under 'admin tools' --&gt; 'updates' to make several changes to Segue's database and file-storage structure. (Adam Franco)
 		
+		
+	* New feature: Added a configuration checking function and some more helpful error messages so that installing and configuring Segue is more straight forward. (Adam Franco)
+		
 	* Bug Fix: #856465 Have added notes and help to themes UI indicating the Popup Window blocker software should be disabled for Segue. (Alex Chapin)
 		
 	* Bug Fix: Improved navigation header display. Fixed style of navigation header in bevelbox theme. (Alex Chapin)
